login plus design changes